リストに追加

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <option value="ather">ather</option>
         </select>
         <br><br>
-        <textarea id="texterea" cols="70" rows="10"></textarea>
+        <textarea id="textarea" cols="70" rows="10"></textarea>
         <br><br>
-        <input type="text"  id="input" placeholder="memo" autocomplete="off">
+        <input type="button"  id="button" value="register">
     </form>
     <ul id="ul"></ul>
     <script src="index.js"></script>
