登録と削除のみ

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br><br>
         <textarea id="textarea" cols="70" rows="10"></textarea>
         <br><br>
-        <input type="button"  id="button" value="register">
+        <input type="button" id="button" value="register" onclick="add()">
     </form>
     <ul id="ul"></ul>
     <script src="index.js"></script>
